developers-reference (2.8.1) unstable; urgency=low

  * update WNPP instructions, based on patch from Marcelo E. Magallon 
    (closes: Bug#69435)
  * spelling corrections, awkward grammar suggestions from Andreas Krueger 
    (closes: Bug#72810)

 -- Adam Di Carlo <aph@debian.org>  Sat,  4 Nov 2000 13:12:57 -0500

developers-reference (2.8.0) unstable; urgency=low

  * Almost all changes for this release are from Josip Rodin
    <joy@debian.org>. Thanks, Josip!

  * debian/control, postinst, prerm, rules: Policy 3.2.1 (closes:
    Bug#68929, Bug#70384)
  * fixed bug closing example (closes: Bug#71198)
  * update the perl regexp from current /usr/lib/dpkg/parsechangelog/debian
  * updated keyring/keyserver information (closes: Bug#67783)
  * updated new-maintainer stuff (closes: Bug#67841)
  * updated for master -> ftp-master move (closes: Bug#68369)
  * noted www.d.o is the right host for web pages, but all other machines
    could be used if necessary
  * reorder mentions of scp to come before FTP, as it is more secure;
    mention the rsync dupload method
  * reorder mentions of pandora <-> non-us, canonical name non-us is
    better
  * other small corrections
  * fixed orphaning/adopting instructions with regard to the new WNPP
  * common.ent: fix urls for cvs.d.o, wnpp, Debian machines page, 
    lists-archives, www.d.o BTS
  * common.ent: changed link for machines from devel/maintainer_contacts
    to the db.d.o CGI
  * Makefile: remove unnecessary subshell

  * Adam's change: update debian/copyright for new Policy, and put my name
    in there a bit with updated years; update doc-base file for FHS

 -- Adam Di Carlo <aph@debian.org>  Sun, 15 Oct 2000 03:25:21 -0400

developers-reference (2.7.2) frozen unstable; urgency=medium

  * I believe this should go into frozen because (a) it's only
    documentation, so it can't introduce RC bugs, and (b) it fixes an
    error which prevented it from building properly; however, whatever