@@ -24,22 +24,8 @@ DEB_VERSION	:= $(shell LC_ALL=C dpkg-parsechangelog | grep '^Version: ' | sed 's
 # pretty-print the date
 DATE		:= $(shell LC_ALL=C date --date="`dpkg-parsechangelog | grep '^Date: ' | sed 's/^Date: *//'`" '+%d %B, %Y')
 
-# source depends -- check if these packages are installed
-SRC_DEPENDS	:= debiandoc-sgml lout psutils
-
-.PHONY: source-depends
-source-depends:
-	@set -e								;\
-	for dep in $(SRC_DEPENDS); do					\
-	    echo "checking if package \`$$dep' is installed..."		;\
-	    dpkg --get-selections | grep "$$dep\W\+install" ||	\
-		exit 1							;\
-	done
-	@echo "all source-depends seem to be installed, good"
-
 build:	developers-reference.sgml
 	$(checkdir)
-#	./debian/rules source-depends
 	rm -f version.ent
 	echo "<!entity version \"$(DEB_VERSION)\">" >> version.ent
 	echo "<!entity date    \"$(DATE)\">"        >> version.ent
