@@ -4,8 +4,9 @@ developers-reference (2.8.1) unstable; urgency=low
     (closes: Bug#69435)
   * spelling corrections, awkward grammar suggestions from Andreas Krueger 
     (closes: Bug#72810)
+  * debian/rules: remove some obsolete source-depends stuff
 
- -- Adam Di Carlo <aph@debian.org>  Sat,  4 Nov 2000 13:12:57 -0500
+ -- Adam Di Carlo <aph@debian.org>  Sat,  4 Nov 2000 13:22:21 -0500
 
 developers-reference (2.8.0) unstable; urgency=low
 
